--- a/app/views/pages/_projects.html.erb
+++ b/app/views/pages/_projects.html.erb
@@ -26,7 +26,7 @@
 
 				<%end%>
 
-				<%= link_to root_path, target: :_blank do %>
+				<%= link_to "https://www.thatHQ.com", target: :_blank do %>
 
 					<div class="item">
 						<h5 class="title">thatHQ</h5>
@@ -38,7 +38,7 @@
 
 				<%end%>
 
-				<%= link_to root_path, target: :_blank do %>
+				<%= link_to "http://www.ArtYam.com", target: :_blank do %>
 
 					<div class="item">
 						<h5 class="title">ArtYam</h5>
@@ -51,7 +51,7 @@
 
 				<%end%>
 
-				<%= link_to root_path, target: :_blank do %>
+				<%= link_to "http://www.ComedyHere.com/Montreal", target: :_blank do %>
 
 					<div class="item">
 						<h5 class="title">ComedyHere</h5>
@@ -64,7 +64,7 @@
 
 				<%end%>
 
-				<%= link_to root_path, target: :_blank do %>
+				<%= link_to "https://github.com/randolrs/react_redux_scoreboard", target: :_blank do %>
 
 					<div class="item">
 						<h5 class="title">Scoreboard Interface</h5>
