switch project order

--- a/app/views/pages/_projects.html.erb
+++ b/app/views/pages/_projects.html.erb
@@ -12,20 +12,6 @@
 
 			<div class="masonry">
 
-				<%= link_to "https://www.Servmanity.com", target: :_blank do %>
-					
-					<div class="item">
-						<h5 class="title">Servmanity</h5>
-						<p class="description">On-demand home services marketplace. The application matches customers with service providers in real-time based on location, availability, service category, and price.</p>
-						<h6 class="tech-stack">Tech Stack:</h6>
-						<%= link_to "Ruby", "http://http://rubyonrails.org/", target: :_blank, class:'stack-item' %>
-						<%= link_to "JQuery", "https://jquery.com/", target: :_blank, class:'stack-item' %>
-						<%= link_to "PostgreSQL", "https://www.postgresql.org/", target: :_blank, class:'stack-item' %>
-						<%= link_to "Stripe API", "https://stripe.com/docs/api", target: :_blank, class:'stack-item' %>
-					</div>
-
-				<%end%>
-
 				<%= link_to "https://www.thatHQ.com", target: :_blank do %>
 
 					<div class="item">
@@ -34,19 +20,6 @@
 						<h6 class="tech-stack">Tech Stack:</h6>
 						<%= link_to "Ruby", "http://http://rubyonrails.org/", target: :_blank, class:'stack-item' %>
 						<%= link_to "JQuery", "https://jquery.com/", target: :_blank, class:'stack-item' %>
-					</div>
-
-				<%end%>
-
-				<%= link_to "http://www.ArtYam.com", target: :_blank do %>
-
-					<div class="item">
-						<h5 class="title">ArtYam</h5>
-						<p class="description">Subscription software-as-a-service eCommerce platform for fine arts galleries and artists. The application features content-rich, responsive, eCommerce-enabled web pages that can be accessed by via short, human-readable URLs.</p>
-						<h6 class="tech-stack">Tech Stack:</h6>
-						<%= link_to "Ruby", "http://http://rubyonrails.org/", target: :_blank, class:'stack-item' %>
-						<%= link_to "JQuery", "https://jquery.com/", target: :_blank, class:'stack-item' %>
-						<%= link_to "Stripe API", "https://stripe.com/docs/api", target: :_blank, class:'stack-item' %>
 					</div>
 
 				<%end%>
@@ -63,11 +36,26 @@
 					</div>
 
 				<%end%>
+				
+
+				<%= link_to "https://www.Servmanity.com", target: :_blank do %>
+					
+					<div class="item">
+						<h5 class="title">Servmanity</h5>
+						<p class="description">On-demand home services marketplace. The application matches customers with service providers in real-time based on location, availability, service category, and price.</p>
+						<h6 class="tech-stack">Tech Stack:</h6>
+						<%= link_to "Ruby", "http://http://rubyonrails.org/", target: :_blank, class:'stack-item' %>
+						<%= link_to "JQuery", "https://jquery.com/", target: :_blank, class:'stack-item' %>
+						<%= link_to "PostgreSQL", "https://www.postgresql.org/", target: :_blank, class:'stack-item' %>
+						<%= link_to "Stripe API", "https://stripe.com/docs/api", target: :_blank, class:'stack-item' %>
+					</div>
+
+				<%end%>
 
 				<%= link_to "https://github.com/randolrs/react_redux_scoreboard", target: :_blank do %>
 
 					<div class="item">
-						<h5 class="title">Scoreboard Interface</h5>
+						<h5 class="title">Scoreboard Interface Concept</h5>
 						<p class="description">An mockup of a generic game scoreboard.</p>
 						<h6 class="tech-stack">Tech Stack:</h6>
 						<%= link_to "NodeJS", "https://nodejs.org", target: :_blank, class:'stack-item' %>
@@ -76,6 +64,22 @@
 					</div>
 
 				<%end%>
+
+				
+
+				<%= link_to "http://www.ArtYam.com", target: :_blank do %>
+
+					<div class="item">
+						<h5 class="title">ArtYam</h5>
+						<p class="description">Subscription software-as-a-service eCommerce platform for fine arts galleries and artists. The application features content-rich, responsive, eCommerce-enabled web pages that can be accessed by via short, human-readable URLs.</p>
+						<h6 class="tech-stack">Tech Stack:</h6>
+						<%= link_to "Ruby", "http://http://rubyonrails.org/", target: :_blank, class:'stack-item' %>
+						<%= link_to "JQuery", "https://jquery.com/", target: :_blank, class:'stack-item' %>
+						<%= link_to "Stripe API", "https://stripe.com/docs/api", target: :_blank, class:'stack-item' %>
+					</div>
+
+				<%end%>
+
 
 			</div>
 
