remoce project header

--- a/app/views/pages/_projects.html.erb
+++ b/app/views/pages/_projects.html.erb
@@ -5,8 +5,8 @@
 	<div class="main-option-content">
 
 		<header>Projects</header>
-		
-		<h3>A Sample of My Recent Work</h3>
+
+		<h3>Recent Work</h3>
 
 		<div class="wrapper">
 
@@ -36,10 +36,10 @@
 					</div>
 
 				<%end%>
-				
+
 
 				<%= link_to "https://www.Servmanity.com", target: :_blank do %>
-					
+
 					<div class="item">
 						<h5 class="title">Servmanity</h5>
 						<p class="description">On-demand home services marketplace. The application matches customers with service providers in real-time based on location, availability, service category, and price.</p>
@@ -65,7 +65,7 @@
 
 				<%end%>
 
-				
+
 
 				<%= link_to "http://www.ArtYam.com", target: :_blank do %>
 
@@ -86,7 +86,7 @@
 		</div>
 
 		<br>
-		
+
 		<h5 class="centered">If you want to get in touch with me, <a class="action-button reveal-slide-down" data-slide-down-panel-id="contact">Contact Me</a></h5>
 
 	</div>
