--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-	
+
 	<head>
 		<title>Shane Randolph</title>
-		
+
 		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 		<%= csrf_meta_tags %>
@@ -12,10 +12,10 @@
 
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
-		<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Oxygen:300,400" rel="stylesheet">
 
 	  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	  	
+
 		<meta name="theme-color" content="#000000">
 
 		<meta name="title" content="Shane Randolph | Web Developer">
@@ -23,7 +23,7 @@
 		<meta name="description" content="Shane Randolph is a web developer that uses data analytics to code, design, and market effective software applications.">
 
 		<% if Rails.env == 'production' %>
-			
+
 			<script>
 			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -44,7 +44,7 @@
 	<body>
 
 <!-- 		Thanks for taking a look at my code; I'm flattered.  I started learning web design by spending hours in the explorer. -->
-					
+
 		<%= yield %>
 
 	</body>
